# FoundationStereoUv

./: pyproject.toml
core/: submodule.py
docker/: compose.yml  dockerfile  run_container.sh
scripts/: run_video.py
